--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -4,5 +4,30 @@
 "service": "Service",
 "articles": "Articles",
 "contact": "Contact",
-"button": "Get Started"
+"button": "Get Started",
+    "home1" :"Quality cleaning for your home",
+    "home2" : "Lorem ipsum dolor sit amet erat iusto vitae officiis possimus fugit beatae. Animi culpa magnam corrupti suscipit totam error labore eaque quo quibusdam beatae aut a dicta, est accusantium facilis non quia? Itaque eligendi, in nobis sed doloribus at voluptates repellat, suscipit dolore, impedit ullam veniam eum officiis. Illum corporis dolor, dignissimos eveniet facere eaque ea accusamus, optio, dicta adipisci perferendis harum! Quos." ,
+    "home3" :"class us now",
+    "about1" :"About" ,
+    "about2" :"Sagittis nibh scelerisque vitae eget vulputate sem elementum sed neque nisi felis non ultrices massa id egestas quam velit pretium nu.",
+    "outlineBtn" :"Explore Services",
+    "service1" :"Our service",
+    "treatment1" :" Covid-19 sanitization",
+    "treatment2" :" We follow guidelines to keep you safe from the COVID-19 virus",
+    "treatment3" :"   Lobortis mattis odio leo eget mauris met aliquet semper molestie sollicitudin congue massa mauris lectus.",
+    "contact1": "Contact Us",
+    "contact2": "In dignissim euismod pretium. Amet enim a eu nam ut urna accumsan pellentesque lacus. Duis pharetra eutortor.",
+    "contact3": "Not convinced yet?",
+    "contact4": "Massa bibendum consectetur mauris. Id gravida purus, dolor dui amet morbi non nunc urna purus diam.",
+    "contact5": "Browse our packages",
+    "form1" :"Full name" ,
+    "form2" :"Adress" ,
+    "form3" :"Requested service",
+    "form4" :"Phone number",
+    "form5" :"Email" ,
+    "form6" :"Day of service" ,
+    "form7" :"Day of note " ,
+    "footer1" :"Quality cleaning for your home",
+    "footer2" :"Lorem ipsum dolor sit amet cteturdo adipiscing elit, sed do eiusmo."
+    
 }
