--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -7,7 +7,7 @@
         "button": " Boshlash",
         "home1": "Uy uchun sifatli tozalash",
         "home2": "Lorem ipsum dolor sit amet erat iusto vitae officiis possimus fugit beatae. Animi culpa magnam corrupti subcipit totam error labore eaque quo quo quibusdam beatae aut a dicta, est accusantium facilis no quia? Itaque eligendi, in nobis sed doloribus va voluptates repellat, suscipit doore, impedit ullam veniam eum officiis. Illum corporis dolor, dignissimos eveniet facere eaque ea accusamus, optio, dicta adipisci perferendis harum! Quos.",
-        "home3": "Hoziroq qo'ng'iroq qiling",
+        "home3": "Qo'ng'iroq qiling",
         "about1": "Biz haqimizda",
         "about2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis, justo in molestie volutpat, libero mauris eleifend nisi, vel volutpat est metus eget elit.",
          "outlineBtn" :"Xizmatlarni o'rganing",
@@ -19,7 +19,7 @@
          "contact2": "Dignissim euismod pretiumda. Amet enim a eu nam ut urna accumsan pellentesque lacus. Duis pharetra eutortor.",
          "contact3": "Hali ham ikkalamadingizmi?",
          "contact4": "Massa bibendum consectetur mauris. Id gravida purus, dolor dui amet morbi non nunc urna purus diam.",
-         "contact5": "Bizning takliflarni ko'ring",
+         "contact5": "Takliflarni ko'ring",
          "form1": "To'liq ism",
          "form2": "Manzil",
          "form3": "So'ralgan xizmat",
