--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -28,5 +28,9 @@
   "form6": "Day of service",
   "form7": "Day of note ",
   "footer1": "Quality cleaning for your home",
-  "footer2": "Lorem ipsum dolor sit amet cteturdo adipiscing elit, sed do eiusmo."
+  "footer2": "Lorem ipsum dolor sit amet cteturdo adipiscing elit, sed do eiusmo.",
+  "footer3" : "Home",
+  "Monday to Friday" :"Monday to Friday",
+  "  Saturday & Sunday":"Saturday & Sunday",
+  " Get a free estimate" :"Get a free estimate"
 }
