--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -28,8 +28,14 @@
          "form6": "Xizmat kuni",
          "form7": "Eslatma kuni",
          "footer1": "Uy uchun sifatli tozalash",
-         "footer2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod."
+         "footer2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
+         "footer3" : "Uy",
+         "Monday to Friday" :"Dushanbadan Jumagacha",
+         "  Saturday & Sunday":"Seshanbadan Shanbagacha",
+         " Get a free estimate" :"Bepul baho oling"
 
+
+         
 
 
     
