--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -30,8 +30,8 @@
          "footer1": "Uy uchun sifatli tozalash",
          "footer2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
          "footer3" : "Uy",
-         "Monday to Friday" :"Dushanbadan Jumagacha",
-         "Saturday & Sunday":"Seshanbadan Shanbagacha",
+         "Monday to Friday" :"Dushanba-Juma",
+         "Saturday & Sunday":"Seshanba-Shanba",
          "Get a free estimate" :"Bepul baho oling"
 
 
